# atoms-sim

./: CMakeLists.txt  glad.c  main copy.cpp  main.cpp
glad/: glad.h
